--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.1",
     "openai": "^4.24.1",
+    "sqs-consumer": "^8.1.3",
     "tslib": "^2.3.0"
   }
 }
