--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,11 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@package-delivery/notification-handler": [
+        "apps/notification-handler/src/index.ts"
+      ]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
