--- a/apps/main-api/main-api/project.json
+++ b/apps/main-api/main-api/project.json
@@ -1,7 +1,7 @@
 {
-  "name": "email-handler",
-  "$schema": "../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "apps/email-handler/src",
+  "name": "main-api",
+  "$schema": "../../../node_modules/nx/schemas/project-schema.json",
+  "sourceRoot": "apps/main-api/main-api/src",
   "projectType": "application",
   "targets": {
     "build": {
@@ -11,11 +11,11 @@
       "options": {
         "target": "node",
         "compiler": "tsc",
-        "outputPath": "dist/apps/email-handler",
-        "main": "apps/email-handler/src/main.ts",
-        "tsConfig": "apps/email-handler/tsconfig.app.json",
-        "assets": ["apps/email-handler/src/assets"],
-        "webpackConfig": "apps/email-handler/webpack.config.js"
+        "outputPath": "dist/apps/main-api/main-api",
+        "main": "apps/main-api/main-api/src/main.ts",
+        "tsConfig": "apps/main-api/main-api/tsconfig.app.json",
+        "assets": ["apps/main-api/main-api/src/assets"],
+        "webpackConfig": "apps/main-api/main-api/webpack.config.js"
       },
       "configurations": {
         "development": {},
@@ -26,14 +26,14 @@
       "executor": "@nx/js:node",
       "defaultConfiguration": "development",
       "options": {
-        "buildTarget": "email-handler:build"
+        "buildTarget": "main-api:build"
       },
       "configurations": {
         "development": {
-          "buildTarget": "email-handler:build:development"
+          "buildTarget": "main-api:build:development"
         },
         "production": {
-          "buildTarget": "email-handler:build:production"
+          "buildTarget": "main-api:build:production"
         }
       }
     },
@@ -45,7 +45,7 @@
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "apps/email-handler/jest.config.ts"
+        "jestConfig": "apps/main-api/main-api/jest.config.ts"
       }
     }
   },
