--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "axios": "^1.0.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.1",
+    "mongoose": "^8.0.3",
     "openai": "^4.24.1",
     "sqs-consumer": "^8.1.3",
     "tslib": "^2.3.0"
