--- a/package.json
+++ b/package.json
@@ -5,26 +5,45 @@
   "scripts": {},
   "private": true,
   "devDependencies": {
+    "@babel/core": "^7.14.5",
+    "@babel/preset-react": "^7.14.5",
+    "@nx/cypress": "17.2.8",
     "@nx/eslint": "17.2.7",
     "@nx/eslint-plugin": "17.2.7",
     "@nx/express": "^17.2.7",
     "@nx/jest": "17.2.7",
-    "@nx/js": "17.2.7",
+    "@nx/js": "17.2.8",
     "@nx/node": "17.2.7",
+    "@nx/react": "17.2.8",
     "@nx/webpack": "17.2.7",
     "@nx/workspace": "17.2.7",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@svgr/webpack": "^8.0.1",
     "@swc-node/register": "~1.6.7",
+    "@swc/cli": "~0.1.62",
     "@swc/core": "~1.3.85",
+    "@testing-library/react": "14.0.0",
     "@types/express": "4.17.13",
     "@types/jest": "^29.4.0",
     "@types/node": "18.16.9",
+    "@types/react": "18.2.33",
+    "@types/react-dom": "18.2.14",
+    "@types/react-is": "18.2.2",
+    "@types/styled-components": "5.1.26",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@typescript-eslint/parser": "^6.9.1",
+    "babel-jest": "^29.4.1",
+    "babel-plugin-styled-components": "1.10.7",
+    "cypress": "^13.0.0",
     "eslint": "~8.48.0",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-cypress": "^2.13.4",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-jsx-a11y": "6.7.1",
+    "eslint-plugin-react": "7.32.2",
+    "eslint-plugin-react-hooks": "4.6.0",
     "jest": "^29.4.1",
+    "jest-environment-jsdom": "^29.4.1",
     "jest-environment-node": "^29.4.1",
     "nx": "17.2.7",
     "prettier": "^2.6.2",
@@ -36,12 +55,18 @@
   },
   "dependencies": {
     "@aws-sdk/client-sqs": "^3.478.0",
+    "@swc/helpers": "~0.5.2",
     "axios": "^1.0.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.1",
     "mongoose": "^8.0.3",
     "openai": "^4.24.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-is": "18.2.0",
+    "react-router-dom": "6.11.2",
     "sqs-consumer": "^8.1.3",
+    "styled-components": "5.3.6",
     "tslib": "^2.3.0"
   }
 }
