--- a/package.json
+++ b/package.json
@@ -55,6 +55,10 @@
   },
   "dependencies": {
     "@aws-sdk/client-sqs": "^3.478.0",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.3",
+    "@mui/material": "^5.15.3",
     "@swc/helpers": "~0.5.2",
     "axios": "^1.0.0",
     "dotenv": "^16.3.1",
