--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "axios": "^1.0.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.1",
+    "firebase": "^10.7.1",
     "mongoose": "^8.0.3",
     "openai": "^4.24.1",
     "react": "18.2.0",
