--- a/package.json
+++ b/package.json
@@ -61,11 +61,15 @@
     "@mui/material": "^5.15.3",
     "@swc/helpers": "~0.5.2",
     "axios": "^1.0.0",
+    "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
+    "env-cmd": "^10.1.0",
     "express": "^4.18.1",
     "firebase": "^10.7.1",
     "mongoose": "^8.0.3",
     "openai": "^4.24.1",
+    "os": "^0.1.2",
+    "path": "^0.12.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-is": "18.2.0",
